--- a/src/assets/stylesheets/components/_map.scss
+++ b/src/assets/stylesheets/components/_map.scss
@@ -1,5 +1,4 @@
 .map {
-
   position: relative;
 
   &,
@@ -8,7 +7,6 @@
     height: 100%;
     background: $blue-grey-50;
   }
-
 }
 
 .map-loading {
@@ -27,10 +25,81 @@
 }
 
 .map-marker {
-
   &[class*="shadow"] {
     filter: blur(5px);
-    opacity: .7;
+    opacity: 0.7;
+  }
+}
+
+.icon-marker {
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  width: white;
+  width: 3.6em;
+  height: 3.6em;
+  font-size: 0.7em;
+  font-weight: bold;
+  background-color: red;
+  border-radius: 100%;
+  box-shadow: 0 2px 5px rgba(black, 0.9);
+
+  &:hover {
+    .icon-marker-tooltip {
+      display: block;
+    }
+  }
+}
+
+.icon-marker-tooltip {
+  display: none;
+  position: absolute;
+  bottom: 100%;
+  width: 16em;
+  font-size: 1.4em;
+  padding: 1em;
+  background-color: #263238;
+  border-radius: 0.4em;
+  margin-bottom: 1em;
+  box-shadow: 0 3px 5px rgba(black, 0.9);
+
+  &:hover {
+    display: block;
+    position: absolute;
+    bottom: -0.6em;
+    left: 50%;
+    content: "";
+    width: 1.4em;
+    height: 1.4em;
+    background-color: #263238;
+    transform: rotate(45deg);
+    margin-left: -0.7em;
   }
 
+  h2 {
+    font-size: 1.5em;
+    line-height: 1.2;
+    margin-bottom: 0.1em;
+    margin-top: 0;
+  }
+
+  h3 {
+    font-size: 1.2em;
+    margin: 0.1em 0;
+    font-weight: normal;
+    color: blue;
+  }
+
+  ul,
+  p {
+    font-weight: normal;
+  }
+
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0.6em 0 0;
+  }
 }
