--- a/src/assets/stylesheets/components/__components.scss
+++ b/src/assets/stylesheets/components/__components.scss
@@ -1,6 +1,5 @@
 @import "container";
-@import "footer";
 @import "header";
 @import "map";
 @import "snippet";
-@import "dashboard";
+@import "tracker";
