--- a/src/assets/stylesheets/components/_header.scss
+++ b/src/assets/stylesheets/components/_header.scss
@@ -9,7 +9,8 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 5vw;
+    height: 4rem;
+    position: relative;
   }
 
   p {
@@ -17,14 +18,16 @@ header {
     font-weight: bold;
     padding: 20px;
     line-height: 30px;
-    &::before {
-      content: "";
-      position: absolute;
-      left: 33vw;
+    .circle {
       background-color: #f2994a;
       width: 32px;
       height: 32px;
       border-radius: 100%;
+    }
+  }
+  @media (max-width: 480px) {
+    p {
+      font-size: 18px;
     }
   }
 }
