--- a/src/assets/stylesheets/components/_tracker.scss
+++ b/src/assets/stylesheets/components/_tracker.scss
@@ -5,13 +5,19 @@
 
   ul {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: auto auto auto;
     list-style: none;
     padding: 0;
     margin: 0;
   }
 }
-
+@media (max-width: 768px) {
+  .tracker-stats {
+    ul {
+      grid-template-columns: auto auto;
+    }
+  }
+}
 .tracker-stat {
   font-size: 2em;
   text-align: center;
